<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name_welcome">Shoe Store</string>
    <string name="welcome_label">Please enter your e-mail and password to login to your account</string>
    <string name="email_label">E-mail</string>
    <string name="password_label">Password</string>
    <string name="email_hint">person@company.com</string>
    <string name="login_text">Login</string>
    <string name="next_button">Next</string>
    <string name="welcome_text">Welcome again!</string>
    <string name="welcomeText2">Hi Ahmed\nYour Last Login was on 15/09/2022 13:25:09</string>
    <string name="instructionText1">How to use the app</string>
    <string name="instructionText2"><![CDATA[- Click \"Start\" Button to go to shoe list screen.\n\n- You can click the floating button to add new shoe.\n\n- Then in shoe detail screen you add new shoe data like name, company, description & size and save it.\n\n- You will notice 3 dots icon in the appbar which contain \"Logout\" button.]]></string>
    <string name="getting_started">Start</string>
    <string name="shoeName">Name</string>
    <string name="shoeCompany">Company</string>
    <string name="shoeSize">Size</string>
    <string name="shoeDescription">Description</string>
    <string name="add_text">Add</string>
    <string name="cancel_text">Cancel</string>
    <string name="welcome_string">Welcome</string>
    <string name="instructions_string">Instructions</string>
    <string name="shoe_list_string">Shoe List</string>
    <string name="detail_list_string">Shoe Detail</string>
    <string name="logout_text">Logout</string>
    <string name="toast_added">Shoe Added Sucessfully</string>
    <string name="toast_empty">Please Enter All Values</string>
    <string name="register_text">Register</string>
</resources>
