<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardColor"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        style="@style/card_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoeName" />

    <TextView
        android:id="@+id/linearlayout_name"
        style="@style/paragraph_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="TextView" />

    <TextView
        style="@style/card_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoeSize" />

    <TextView
        android:id="@+id/linearlayout_size"
        style="@style/paragraph_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="TextView" />

    <TextView
        style="@style/card_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoeCompany" />

    <TextView
        android:id="@+id/linearlayout_company"
        style="@style/paragraph_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="TextView" />

    <TextView
        style="@style/card_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoeCompany" />

    <TextView
        android:id="@+id/linearlayout_description"
        style="@style/paragraph_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />
</LinearLayout>

</layout>